--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
-@import './styles/classes.css'; /* do not remove */
-@import './styles/base.css'; /* do not remove */
+@import "./styles/classes.css"; /* do not remove */
+@import "./styles/base.css"; /* do not remove */
 
 /*
     REQUIREMENTS
@@ -44,3 +44,89 @@
         On screens wider than 800px, the <p> element inside the div must additionally have no top margin
 
 */
+
+@media (min-width: 800px) {
+  header {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-auto-rows: auto;
+  }
+
+  header:first-child div {
+    display: grid;
+    grid-template-rows: max-content max-content;
+    grid-auto-columns: auto;
+  }
+
+  header:first-child div div {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-auto-rows: auto;
+    row-gap: 2em;
+  }
+}
+
+#flexbox {
+  display: flex;
+  flex-direction: column;
+}
+
+#canvas {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+@media (min-width: 800px) {
+  #flexbox h2 {
+    font-size: 6rem;
+  }
+}
+
+@media (min-width: 800px) {
+  #grid {
+    display: grid;
+    grid-template-rows: auto 250px 250px 250px 250px;
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+
+  #grid > * {
+    padding: 1em;
+  }
+
+  #grid h2 {
+    grid-column: 1 / span 3;
+    text-align: right;
+    font-size: 6rem;
+  }
+
+  #grid h2 + p {
+    grid-column: 1 / span 2;
+  }
+
+  #grid div {
+    grid-column: 2 / span 2;
+    grid-row: 3 / span 3;
+  }
+}
+
+@media (min-width: 800px) {
+  footer div {
+    display: flex;
+    flex-direction: row;
+    padding: 4em;
+    justify-content: space-between;
+  }
+
+  footer div p {
+    margin-top: 0;
+  }
+}
+
+@media (max-width: 800px) {
+  footer div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+}
